// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly should render correctly when isPathPreviewing 1`] = `
<div>
  <div />
</div>
`;

exports[`should render correctly should render correctly with estimatedTime 1`] = `
<div>
  <div
    class="container mac"
  >
    <div
      class="result"
    >
      Estimated Time: 1 m 0 s
    </div>
  </div>
</div>
`;

exports[`should render correctly web check connection 1`] = `
<div>
  <div
    class="container mac"
  >
    <div
      class="btn"
      title="Estimate time"
    >
      <img
        draggable="false"
        src="img/icon-stopwatch.svg"
      />
    </div>
  </div>
</div>
`;

exports[`should render correctly when WITHOUT estimatedTime 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="btn"
      title="Estimate time"
    >
      <img
        draggable="false"
        src="img/icon-stopwatch.svg"
      />
    </div>
  </div>
</div>
`;
